# bazel-features-test

./: BUILD.bazel  c++14.cc  c++17.cc  c++20.cc  c++23.cc  c++98.cc  c11.c  c17.c  gnu++14.cc  gnu++17.cc  gnu++20.cc  gnu++23.cc  gnu++98.cc  gnu11.c  gnu17.c  gnu23.c
