cc_test(
    name = "c++98_feature_test",
    srcs = ["c++98.cc"],
    features = ["c++98"],
    copts = ["-Werror=deprecated-declarations"],
)

cc_test(
    name = "c++14_feature_test",
    srcs = ["c++14.cc"],
    features = ["c++14"],
)

cc_test(
    name = "c++17_feature_test",
    srcs = ["c++17.cc"],
    features = ["c++17"],
)

cc_test(
    name = "c++20_feature_test",
    srcs = ["c++20.cc"],
    features = ["c++20"],
)

# requires gcc-12, clang-16, or vs2022
cc_test(
    name = "c++23_feature_test",
    srcs = ["c++23.cc"],
    features = ["c++2b"],
    tags = ["manual"],
)
